# pdn-libax25 Cargo workspace.
#
# Licence: LGPL-3.0-or-later (see COPYING.LESSER / COPYING).
#
# Three crates:
#   rhp             - RHPv2-over-TCP client (shared internal library)
#   libax25         - drop-in replacement for ve7fet libax25 helper lib (cdylib)
#   ax25-interpose  - LD_PRELOAD libc interposer routing AF_AX25 to pdn (cdylib)
[workspace]
resolver = "2"
members = [
    "crates/rhp",
    "crates/libax25",
    "crates/ax25-interpose",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"
repository = "https://github.com/packet-net/pdn-libax25"
rust-version = "1.74"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

# Optimise the release cdylibs; keep panics contained inside the .so so a
# panic in an interposed call unwinds to our catch boundary rather than
# aborting the host application.
[profile.release]
opt-level = 2
