[package]
name = "rhp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RHPv2-over-TCP client for the pdn AX.25 stack (internal to pdn-libax25)."

[lib]
name = "rhp"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
libc.workspace = true
