[package]
name = "rhpv2"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "A client for the RHPv2 wire protocol (Radio Host Protocol v2) over TCP, for the AX.25 packet-radio stack."
readme = "README.md"
homepage = "https://github.com/packet-net/pdn-libax25"
keywords = ["ax25", "packet-radio", "ham-radio", "rhp", "amateur-radio"]
categories = ["network-programming"]

[lib]
name = "rhpv2"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
libc.workspace = true
